vlib/v/checker/tests/mod_name_dup_var_err.out
vlib/v/checker/tests/mod_name_dup_var_err.vv:4:2: notice: duplicate of a module names `foo`
    2 | 
    3 | fn bar() {
    4 |     foo := 'bar'
      |     ~~~
    5 |     println(foo)
    6 | }
Details: Module name duplicates become an error after 2023-31-10.
vlib/v/checker/tests/mod_name_dup_var_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module foo
      | ^
    2 | 
    3 | fn bar() {
